--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>.link_to_grails_plugins</name>
 			<type>2</type>
-			<location>C:/Users/zhaoqunqi/grails/eclipseWorkspace/MyGrails/target/work/plugins</location>
+			<location>/home/zhaoqunqi/git/railsApp/target/work/plugins</location>
 		</link>
 	</linkedResources>
 </projectDescription>
